--- a/VerbannteAutoren/main.css
+++ b/VerbannteAutoren/main.css
@@ -1,13 +1,16 @@
-.div {
-    font-size: 14pt;
+div {
+    font-size: 14px;
+    font-family: Helvetica Neue;
 }
 
-.div a {
+div a {
 	color: #007FFF;
     text-decoration: underline;
 	text-decoration-color: #007FFF;
 }
 
 h2 {
-	font-size: 18pt;
+	font-size: 14pt;
+    font-family: Helvetica Neue;
+
 }
